--- a/rro_overlays/FrameworksResOverlayMarble/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlayMarble/res/values/config.xml
@@ -4,7 +4,10 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-     <!-- Screen brightness used to dim the screen when the user activity
+    <!-- Auto-brightness sensor type string -->
+    <string name="config_displayLightSensorType">"android.sensor.light"</string>
+
+    <!-- Screen brightness used to dim the screen when the user activity
          timeout expires.  May be less than the minimum allowed brightness setting
          that can be set by the user. -->
      <integer name="config_screenBrightnessDim">15</integer>
