--- a/rro_overlays/SettingsProviderOverlayIndia/res/values/defaults.xml
+++ b/rro_overlays/SettingsProviderOverlayIndia/res/values/defaults.xml
@@ -17,6 +17,9 @@
  */
 -->
 <resources>
+    <!-- Default for Settings.Global.DEVICE_NAME $1=MANUFACTURER $2=MODEL-->
+    <string translatable="false" name="def_device_name">Xiaomi POCO F5</string>
+
     <!-- Default for Settings.Global.DEVICE_NAME $1=MODEL-->
-    <string name="def_device_name_simple">POCO F5</string>
+    <string translatable="false" name="def_device_name_simple">POCO F5</string>
 </resources>
