--- a/rro_overlays/FrameworksResMarble/res/values/evolution_config.xml
+++ b/rro_overlays/FrameworksResMarble/res/values/evolution_config.xml
@@ -45,6 +45,10 @@
     <!-- Expected value from fast charging status file  -->
     <string name="config_oemFastChargerStatusValue" translatable="false">1</string>
 
+    <!-- Device model (Build.MODEL) to spoof for netflix -->
+    <string name="config_netflixSpoofModel" translatable="false">23049PCD8G</string>
+
     <!-- Pocket Lock -->
     <bool name="config_pocketModeSupported">true</bool>
+    <bool name="config_pocketUseLightSensor">false</bool>
 </resources>
