--- a/rro_overlays/SettingsOverlayMarble/res/values/config.xml
+++ b/rro_overlays/SettingsOverlayMarble/res/values/config.xml
@@ -32,6 +32,9 @@
     <!-- Whether to show a preference item for regulatory information in About phone -->
     <bool name="config_show_regulatory_info">true</bool>
 
+    <!-- Whether to show min/peak refresh rate in display settings -->
+    <bool name="config_show_refresh_rate_controls">true</bool>
+
      <!-- Display settings screen, Color mode options. Must be the same length and order as
          config_color_mode_options_values below. Only the values that also appear in
          frameworks/base/core/res/res/values/config.xml's config_availableColorModes are shown. -->
