--- a/parts/res/layout/refresh_list_item.xml
+++ b/parts/res/layout/refresh_list_item.xml
@@ -29,7 +29,7 @@
         android:scaleType="centerInside" />
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical">
@@ -43,13 +43,12 @@
             android:ellipsize="marquee"
             android:singleLine="true"
             android:textAlignment="viewStart"
-            android:textAppearance="@android:style/TextAppearance.Material.Medium"
-            android:textColor="?android:attr/textColorPrimary" />
+            android:textColor="?android:attr/textColorPrimary"
+            style="?android:attr/textAppearanceMedium" />
 
         <Spinner
             android:id="@+id/app_mode"
-            android:layout_marginTop="2dp"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
     </LinearLayout>
